# ros-testing-tutorial

./: README.md
integration_exercise/: CMakeLists.txt  manifest.xml
integration_exercise/src/: counter_node.cpp
integration_exercise/src/test/: test_counter_node.cpp
integration_exercise/test/: counter_node.test
ros-gtest-samples/: CMakeLists.txt  manifest.xml
ros-gtest-samples/src/: CMakeLists.txt
ros-gtest-samples/src/test/: CMakeLists.txt  gtest_myfirsttest.cpp  sample2_unittest.cc  sample3_unittest.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
ros-tdd-seminar/: mainpage.dox  manifest.xml
ros-tdd-seminar/src/test/: CMakeLists.txt
rostest_node_example/: mainpage.dox  manifest.xml
rostest_node_example/src/: CMakeLists.txt  counter_node.cpp  counter_node.hpp
rostest_node_example/src/test/: CMakeLists.txt  sample1_unittest.cc  test_counter_node.cpp
rostest_node_example/test/: counter_node.test
